--- a/index.html
+++ b/index.html
@@ -16,26 +16,27 @@
 
   <div id="card">
     <div class="img">
-      <img src="./images/image-equilibrium.jpg" alt="image" >
+      <img src="./images/image-equilibrium.jpg" alt="image" class="img" >
     </div>
 
 
-    Equilibrium #3429
+    <div class="heading">Equilibrium #3429</div>
 
-    Our Equilibrium collection promotes balance and calm.
+    <div class="sub-heading">Our Equilibrium collection promotes balance and calm.</div>
 
-    0.041 ETH
-    3 days left
+    <div class="eth">0.041 ETH</div>
+    <div class="days"> 3 days left </div>
   
-    Creation of Hardik
+    <div class="creater">Creation of Hardik</div>
 
 
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Hardik pratap</a>.
-    </div>
 
+  </div>
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Hardik pratap</a>.
   </div>
 
   
