--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
 
     <div class="sub-heading">Our Equilibrium collection promotes balance and calm.</div>
 
-    <div class="eth">0.041 ETH</div>
-    <div class="days"> 3 days left </div>
-  
-    <div class="creater">Creation of Hardik</div>
+    
+    <div class="info">
+      <div class="eth">0.041 ETH</div>
+      <div class="days"> 3 days left </div>
+     
+  </div>
+  <hr>
+  <div class="creator">
+    <img src="./images/image-avatar.png" class="creator-img">
 
+  <div class="creator-name">Creation of <div style="color: white;"> Hardik</div>
+
+  </div>
 
 
 
