--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="creator">
     <img src="./images/image-avatar.png" class="creator-img">
 
-  <div class="creator-name">Creation of <div style="color: white;"> Hardik</div>
+  <div class="creator-name">Creation of <div style="color: white; padding-left: 5px;"> Hardik</div>
 
   </div>
 
