added hover effect

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 <body>
 
   <div id="card">
-    <div class="img">
+    <div class="img-container">
       <img src="./images/image-equilibrium.jpg" alt="image" class="img" >
+    
+      <div class="eye-icon">
+        <img src="./images/icon-view.svg" alt="" srcset="">
+      </div>
+
     </div>
 
-
-    <div class="heading">Equilibrium #3429</div>
-
-    <div class="sub-heading">Our Equilibrium collection promotes balance and calm.</div>
+   <div class="heading">Equilibrium #3429</div>
+   <div class="sub-heading">Our Equilibrium collection promotes balance and calm.</div>
 
     
     <div class="info">
